# a1bnbSub

./: .gitignore  README.md  docker-compose.yml
Backend/: Dockerfile  manage.py  requirements.txt
Backend/django_web/: asgi.py  settings.py
Backend/homepage/: models.py  views.py
Backend/homepage/migrations/: 0001_initial.py
Backend/mysite/: views.py
Backend/venv_django/: pyvenv.cfg
Frontend/: Dockerfile  package.json
Frontend/src/data/: utils.js
Frontend/src/pages/: BecomeHost.js  Home.js  Signin.js
backend/: db.sqlite3  manage.py  requirement.txt
backend/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/django_web/: server_urls.py  settings.py  urls.py
backend/homepage/: admin.py  models.py  models_.py  serializers.py  urls.py  urls_.py  views.py  views_.py
backend/homepage/migrations/: 0001_initial.py
classification/: main.py
classification/models/: classification.py  matching.py
detection/: main.py  main_draw.py  package-lock.json  package.json
django_web-master_tw/: db.sqlite3  manage.py  package-lock.json  setting.txt
django_web-master_tw/django_web/: settings.py  urls.py  wsgi.py
django_web-master_tw/homepage/: admin.py  models.py  serializers.py  urls.py  views.py
django_web-master_tw/mysite/: models.py  urls.py
fastapi/: main.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js  store.js
react-app/router-tutorial/: package-lock.json  package.json
textgeneration/: README.md  main.py  model.py  pyproject.toml
(+35 files in other folders)
